fix code spacing and logo font

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 
   --ff-accent: "Montserrat", sans-serif;
   --ff-base: "Roboto", sans-serif;
-  --ff-base: "Ubuntu", sans-serif;
+  --ff-logo: "Ubuntu", sans-serif;
 
   --spacing-50: 0.25rem;
   --spacing-100: 0.5rem;
